# entelect-2025-Zooscape

./: .ai-rules.md  .dockerignore  .editorconfig  .gitattributes  .gitignore  AGENTS.md  CAPTURE_AVOIDANCE_FIX_REPORT.md  CRITICAL-WORKFLOW-REQUIREMENTS.md  Dockerfile  GameRules.md  IMPLEMENTATION_SUMMARY.md  Marvijo.Zooscape.sln  PRD.md  README-TestCreation.md  README.md  Zooscape.sln  analyze_pellet_collection.ps1  analyze_pellet_missed_ticks.ps1  bak.ra-run-all.bat  build.bat  create_test.ps1  create_test_examples.ps1  debug.txt  dependencies.txt  docker-compose.yml  evolution-manager.ps1  high-scores.txt  lessons-learned-section.md  logs-format.json  plan.md  quick-start-all.ps1  ra-run-all-local.ps1  ra-run-all.bat  ra-run-all.ps1  rt-run-tests.ps1  rta-run-tests-api.ps1  rui-run-frontend.ps1  rui-run-frontend.sh  run-ZooscapeRunner.bat  run-advanced-mcts-bot.ps1  (+25 more)
.ai-rules/: activeContext.md  important-file-paths.md  productContext.md  progress.md  systemPatterns.md  techContext.md
.cursor/rules/: .ai-rules.md
.github/chatmodes/: AutomatedLogAnalysisTestCreation.chatmode.md
.github/workflows/: dotnetcore.yml
.windsurf/: .ai-rules.md
.windsurf/rules/: .ai-rules.md  .general-rules-001.md  cpp-development-notes.md
.windsurf/workflows/: g2mcts.md  o4mcts.md
.windsurfrules/: .ai-rules.md
Application/: WorkerService.cs  Zooscape.Application.csproj
Application/Config/: GameSettings.cs  S3Configuration.cs
Application/Events/: CloseAndFlushLogsEvent.cs  CloudCallbackEvent.cs  CloudCallbackEventType.cs  GameStateEvent.cs  IEventDispatcher.cs  UpdatePlayerEvent.cs
Application/Models/: WinConditions.cs
Application/Services/: GameStateService.cs  IGameStateService.cs  IZookeeperService.cs  ScoreService.cs  ZookeeperService.cs
Bots/: Program.cs  appsettings.json
Bots/AdvancedMCTSBot/: .dockerignore  .gitignore  AdvancedMCTSBot.sln  Bot.cpp  Bot.h  CMakeLists.txt  CMakePresets.json  Dockerfile  GameState.cpp  GameState.h  Heuristics.cpp  Heuristics.h  MCTSEngine.cpp  MCTSEngine.h  MCTSNode.cpp  MCTSNode.h  MctsService.cpp  MctsService.h  README.md  build.bat  build.sh  config.json  setup.sh
Bots/AdvancedMCTSBot/AdvancedMCTSBot/: AdvancedMCTSBot.cpp  AdvancedMCTSBot.h  CMakeLists.txt
Bots/AdvancedMCTSBot/Testing/Temporary/: CTestCostData.txt
Bots/AdvancedMCTSBot/include/: GameState.h  Heuristics.h  MCTSEngine.h  SignalRClient.h
Bots/AdvancedMCTSBot/src/: GameState.cpp  SignalRClient.cpp  main.cpp
Bots/AdvancedMCTSBot/tests/: AllTests.cpp  CommonFunctionalTest.h  JsonGameStateLoader.cpp  JsonGameStateLoader.h  Test162.cpp  Test162_ClingyHeuroBot2.cpp  Test34.cpp  Test805_AdvancedMCTSBot.cpp
Bots/AdvancedMCTSBot/tools/: GameStateInspector.cpp
Bots/BasicBot/: BasicBot.csproj  Program.cs
Bots/ClingyHeuroBot/: ClingyHeuroBot.csproj  GeeHeuroBot.csproj  Heuristics.cs  Program.cs  WEIGHTS.cs  appsettings.json
Bots/ClingyHeuroBot2/: .gitignore  AdaptivePathfindingHeuristic.cs  AnimalCongestionHeuristic.cs  AnticipateCompetitionHeuristic.cs  AreaControlHeuristic.cs  CaptureAvoidanceHeuristic.cs  CaptureRecoveryStrategyHeuristic.cs  CenterControlHeuristic.cs  CenterDistanceBonusHeuristic.cs  ChangeDirectionWhenStuckHeuristic.cs  ClingyHeuroBot2.csproj  CommandQueueOptimizationHeuristic.cs  CornerControlHeuristic.cs  CycleDetectionHeuristic.cs  DensityMappingHeuristic.cs  DirectionalVarietyHeuristic.cs  DistanceToGoalHeuristic.cs  EarlyGameZookeeperAvoidanceHeuristic.cs  EdgeAwarenessHeuristic.cs  EmptyCellAvoidanceHeuristic.cs  EndgameStrategyHeuristic.cs  EscapeRoutesHeuristic.cs  EvolutionCoordinator.cs  FirstCommandAdvantageHeuristic.cs  GatherNear-Integration-Summary.md  HeuristicLogHelper.cs  Heuristics.cs  IHeuristic.cs  LineOfSightPelletsHeuristic.cs  MobilityHeuristic.cs  MoveIfIdleHeuristic.cs  MovementConsistencyHeuristic.cs  OpponentProximityHeuristic.cs  OpponentTrailChasingHeuristic.cs  PathSafetyHeuristic.cs  PelletAreaControlHeuristic.cs  PelletEfficiencyHeuristic.cs  Program.cs  (+24 more)
CloudIntegration/: Zooscape.Infrastructure.CloudIntegration.csproj
Domain/: Zooscape.Domain.csproj
FunctionalTests/: AllBotsTests.cs  BotFactory.cs  BotTestHelper.cs  BotTestRunner.cs  BotTestsBase.cs  FunctionalTestParams.cs  FunctionalTests.csproj  JsonDrivenTests.cs  Position.cs  Program.cs  StandardBotTests.cs  TestDataSource.cs  TestDefinition.cs  TestParams.cs  test-api.json  test_definitions.json
MapToImage/: Program.cs
Marvijo.Zooscape.Bots.Common/: HeuristicContext.cs  IBot.cs  IHeuristic.cs  IHeuristicContext.cs  Marvijo.Zooscape.Bots.Common.csproj
PlayableBot/: PlayableBot.sln  Program.cs  UI.cs
ReferenceBot/: Dockerfile  Program.cs  ReferenceBot.csproj  appsettings.json
S3Logger/: IStreamingFileLogger.cs  S3Logger.csproj  StreamingFileLogger.cs
SignalRHub/: Zooscape.Infrastructure.SignalRHub.csproj
Visualiser/: Program.cs  README.md  icon.svg.import  visualiser.csproj
Zooscape/: Program.cs  Zooscape.csproj  appsettings.Production.json  appsettings.json
Zooscape.API/: Program.cs  Zooscape.API.csproj  Zooscape.API.http
ZooscapeRunner/: CHANGELOG.md  Directory.Packages.props  ZooscapeRunner-vsmac.slnf  ZooscapeRunner.sln  global.json
ZooscapeTests/: GameplayTests.cs  TestUtils.cs  WinConditionsTests.cs  WorldTests.cs  ZookeeperTests.cs
bot-analysis/: aa-improve-bot-README.md  automated-weight-analysis.md  available-tools.md  critical-workflow.md  lessons-staticheuro-pellet.md  logs-20250719_154013.md  scenario-based-tests.md  troubleshooting.md
docs/: 2025-Zooscape.code-workspace  genetic-algorithm-evolution-plan.md  prompt-update-weights-from-logs.md  strategy-deep-research-06-MAY-2025.md  train-from-json-states.md
engine/: Dockerfile  README.md  Rules.md  docker-compose.yml
evolution-data/: high-scores.json
tmp/: GameStateInspector.cs  cpp_notes_vcpkg_signalr.md
tools/: README.md  find_close_zookeeper_state.ps1  run-headtohead.ps1  run-neuralnet-headtohead.ps1
visualizer-2d/: Dockerfile  PERFORMANCE_OPTIMIZATIONS.md  README.md  index.html  package-lock.json  package.json  structure.md  vite.config.js
(+906 files in other folders)
